# gitlab_pipeline_mock

./: .gitignore  API.md  EXAMPLE.md  HOW.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
app/: auth.py  config.py  database.py  logic.py  main.py  models.py  openapi.py  schemas.py  seeding.py
app/routes/: pipelines.py  scenarios.py
docs/: START.md
tests/: conftest.py  test_pipelines.py
