[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-gitlab-pipeline"
version = "0.1.0"
description = "Mock GitLab pipeline trigger service built with FastAPI and SQLite"
authors = [{name = "Dev Agent"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.27,<0.28",
  "sqlalchemy>=2.0,<2.1",
  "pydantic>=2.5,<3",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
  "httpx>=0.25,<0.28",
]
